<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChangeResults">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textCaption"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/caption_text"
        android:textColor="@color/colorCaption"
        android:textStyle="bold"
        android:layout_gravity="top|left"
        android:textSize="22sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textChangeToMake"
        android:layout_below="@id/textCaption"
        android:text="@string/string_change_to_make"
        android:textStyle="bold"
        android:layout_marginTop="10sp"
        android:layout_marginRight="25sp"
        android:textSize="20sp"
        android:layout_toStartOf="@+id/editChangeToMake"
        android:textIsSelectable="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editChangeToMake"
        android:text="@string/string_zero_dollars"
        android:editable="false"
        android:inputType="numberDecimal"
        android:gravity="bottom|right"
        android:textSize="19sp"
        android:textStyle="bold"
        android:width="150dp"
        android:layout_below="@+id/textCaption"
        android:layout_alignParentEnd="true"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textChangeTotal"
        android:layout_below="@id/textChangeToMake"
        android:text="@string/string_change_total"
        android:layout_marginTop="9sp"
        android:layout_marginRight="25sp"
        android:textSize="18sp"
        android:layout_toStartOf="@+id/editChangeToMake"
        android:gravity="bottom" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/string_zero_dollars"
        android:id="@+id/textChange"
        android:textSize="18sp"
        android:layout_marginRight="7sp"
        android:layout_below="@+id/editChangeToMake"
        android:layout_alignEnd="@+id/editChangeToMake" />

</RelativeLayout>
