<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="ratrenrao.cs3270a6.ChangeMaxAmount">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_save"
        android:id="@+id/buttonSave"
        android:gravity="center"
        android:textSize="14sp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/editMaxAmount"
        android:layout_alignEnd="@+id/editMaxAmount"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_max_change"
        android:textSize="18sp"
        android:textStyle="bold"
        android:id="@+id/textSetMax"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/textMaxChange"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menuSetMax"
        android:id="@+id/textMaxChange"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"/>

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:editable="true"
        android:inputType="number"
        android:id="@+id/editMaxAmount"
        android:gravity="right"
        android:layout_alignBottom="@+id/textSetMax"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="8dp"/>

</RelativeLayout>

